# humiro_fire_suppression

./: .gitignore  BACKUP_INFO.md  CLAUDE.md  CLAUDE.md.backup  DRONE_COMMUNICATION_UPDATE.md  GITHUB_UPLOAD_GUIDE.md  MIGRATION_SUMMARY.md  README.md  SOURCE_FILES_STATUS.md  TODO_GUI_FIXES.md  Untitled  fc_parameters_fixed.txt  fc_parameters_raw.txt  setup_env.sh
.github/: README_WORKSPACES.md
.github/workflows/: build-workspaces.yml
application/: CMakeLists.txt  build.sh  config.h  main.cpp
application/src/: application_manager.cpp  application_manager.h  frame_compositor.cpp  frame_compositor.h
config/: device_config.env  fastrtps_profile.xml  versions.env
custom_message/: CMakeLists.txt  README.md
custom_message/examples/: README_TEST.md  build_test_sender.sh  example_usage.cpp  test_message_sender.cpp
custom_message/include/custom_message/: custom_message.h  custom_message_type.h
custom_message/src/: custom_message.cpp
custom_message/test/: custom_message_sender_gui_v2.py  debug_message_flow.sh  test_port_check.sh  test_px4_mode_change.py
deployment/systemd/: dnsmasq-px4.service  mavlink-router.service  micro-ros-agent.service
docs/: CHANGELOG.txt  CLAUDE_v1.0_backup.md  CUSTOM_MESSAGE_DEBUG_GUIDE.md  DRONE_CLONE_GUIDE.md  FC_PARAMETER_SETUP.md  LEPTON_GAIN_MODE_INFO.md  LIDAR_POINT_OUTPUT_FLOW.md  OFFBOARD_MODE_SETUP.md  PURETHERMAL_GAIN_MODE_CONTROL.md  PX4_16_PARAMETER_CHECKLIST.md  PX4_16_UXRCE_DDS_SETUP.md  PX4_MSGS_VERSION.md  PX4_NAV_STATE_REFERENCE.md  QOS_COMPATIBILITY_FIX.md  README.md
docs/installation/: 1000-Project_Summery.html  2000-VIM4_DEV_SETUP.html  3000-INSTALLATION_GUIDE.html  4000-POST_INSTALL_GUIDE.html  5000-IMAGE_BACKUP_RESTORE.html
docs/setup/: GIT_SETUP.md  WORKSPACE_REBUILD_GUIDE.md
docs/technical/: FIREFIGHTING_SYSTEM.md  FIX_FC_ETHERNET_IP.md  LIDAR_TARGETING.md  README.md  RTK_FORMATION.md  RTK_PRECISION_HOVERING.md
lidar/: README.md
lidar/src/: CMakeLists.txt  FRONT_DISTANCE_EXPLANATION.md  LD19_CONNECTION_AND_CONTROL.md  LD19_COORDINATE_SYSTEM.md  LD19_TECHNICAL_SPEC.md  RUN_LIDAR.md  TEST_GUIDE.md  TEST_STATUS.md  TROUBLESHOOTING.md  UART_E_ACTIVATION_GUIDE.md  UART_E_SETUP.md  activate_uart_e.sh  angle_statistics_test.cpp  check_hardware.sh  debug_raw_data  debug_raw_data.cpp  detailed_analysis  detailed_analysis.cpp  distance_overlay.cpp  distance_overlay.h  enable_uart_e.sh  lidar_config.h  lidar_connection_example.cpp  lidar_interface.cpp  lidar_interface.h  lidar_ros2_publisher.cpp  lidar_ros2_publisher.h  main_test.cpp  test_lidar.sh
navigation/src/offboard/: CMakeLists.txt  README.md  package.xml  test_arm.cpp  test_mission.cpp  test_rtl.cpp  test_takeoff.cpp  test_waypoint.cpp
navigation/src/offboard/autonomous/: arm_handler.cpp  arm_handler.h  distance_adjuster.cpp  distance_adjuster.h  offboard_manager.cpp  offboard_manager.h  rtl_handler.cpp  rtl_handler.h  takeoff_handler.cpp  takeoff_handler.h  waypoint_handler.cpp  waypoint_handler.h
osd/src/: CMakeLists.txt
osd/src/lidar/: distance_overlay.cpp  distance_overlay.h
osd/src/mission/: mission_overlay.cpp  mission_overlay.h
osd/src/status/: status_overlay.cpp  status_overlay.h
osd/src/targeting/: aim_indicator.cpp  hotspot_tracker.cpp  hotspot_tracker.h
osd/src/thermal/: thermal_overlay.cpp  thermal_overlay.h
osd/src/utils/: KOREAN_TEXT_USAGE.md  korean_text_renderer.cpp  korean_text_renderer.h
qgc_custom/: QGC_CUSTOM_README.md
qgc_custom/qml/: FireControlPanel.qml  FirePointPanel.qml  FormationStatusPanel.qml  HumiroCustomPlugin.qml
reports/: PROJECT_PROGRESS_REPORT.md
ros2/src/: CMakeLists.txt  README.md
ros2/src/status/: status_ros2_subscriber.cpp  status_ros2_subscriber.h
scripts/check/: 101-check_px4_connection.sh  103-verify_installation.sh
scripts/debug/: check_all_services.sh  check_offboard_failure.sh  check_offboard_issue.sh  check_px4_connection.sh  check_px4_uxrce_params.sh  check_ros2_fc_connection.sh  ros2_topic_echo_px4.sh
streaming/src/: CMakeLists.txt  http_server.cpp  http_server.h  rtsp_server.cpp  rtsp_server.h  streaming_manager.cpp  streaming_manager.h  test_osd_stream.cpp
targeting/: README.md
targeting/src/: CMakeLists.txt  aim_indicator.cpp  aim_indicator.h  distance_overlay.cpp  distance_overlay.h  targeting_frame_compositor.cpp  targeting_frame_compositor.h
thermal/src/: CMakeLists.txt  Makefile  README.md  camera_manager.cpp  camera_manager.h  config.h  frame_compositor.cpp  frame_compositor.h  http_server.cpp  http_server.h  main.cpp  rtsp_server.cpp  rtsp_server.h  thermal_basic_overlay.cpp  thermal_basic_overlay.h  thermal_data.h  thermal_processor.cpp  thermal_processor.h  thermal_ros2_publisher.cpp  thermal_ros2_publisher.h  thread_safe_queue.h  utils.cpp  utils.h
throwing_mechanism/: README.md
work-plan/: 000_PROJECT_PROGRESS_REPORT.md  001_PROJECT_MASTER_PLAN.md  004_REFACTORING_COMPLETE_SUMMARY.md  004_VIM4_AUTONOMOUS_CONTROL_PLAN.md  004_WORK_PLAN_UPDATE_SUMMARY.md  005_QUICK_START_ROS2_TOPICS.md  005_STREAMING_ARCHITECTURE_REFACTORING.md  006_UART_CONFIGURATION_UPDATE.md  010_ROS2_TOPIC_CHECK_GUIDE.md  011_ROS2_TOPIC_ARCHITECTURE.md  013_NEXT_STEPS_FORMATION_CONTROL.md  018_README.md  019_MAVLINK_CUSTOM_MESSAGE.md  020_QGC_DEVELOPMENT_GUIDE.md  020_RTK_GPS_COORDINATE_FORMAT.md  021_MAVLINK_ARCHITECTURE_REFACTORING.md  022_COMMUNICATION_ARCHITECTURE.md  022_COMMUNICATION_ARCHITECTURE_STATUS.md  022_PHASE3_TEST_GUIDE.md  023_PHASE3_PLAN.md  023_SCRIPT_DEVICE_CONFIG_INTEGRATION.md  024_PHASE3_IMPLEMENTATION_NOTES.md  025_PHASE3_COMPLETE.md  027_PHASE1_PROGRESS.md  031_MAIN_APPLICATION_STRUCTURE_ANALYSIS.md  032_LIDAR_IMPLEMENTATION_SUMMARY.md  033_HYBRID_FORMATION_CONTROL_DESIGN.md  034_FOLDER_RESTRUCTURE_PLAN.md  035_FIRE_SUPPRESSION_SCENARIO.md  038_DETAILED_DEVELOPMENT_PLAN.md  044_20260102_px4_msgs_fix.md  20260102_autonomous_phase1_complete.md  ANALYSIS_REPORT.md  APPLICATION_REFACTORING_COMPLETE.md  ARCHITECTURE_REFACTORING_PROPOSAL.md  CURRENT_STATUS.md  CURRENT_STATUS_SUMMARY.md  DETAILED_DEVELOPMENT_PLAN.md  DEVELOPMENT_STATUS.md  FINAL_STATUS.md  (+18 more)
(+42 files in other folders)
